[bs] update from Pootle (firefox)

--- a/bs/browser/chrome/browser/devtools/webconsole.properties
+++ b/bs/browser/chrome/browser/devtools/webconsole.properties
@@ -178,13 +178,13 @@ longStringTooLong=String koji pokušavate vidjeti je predug za prikaz na Web kon
 # string  displayed in the network panel when the response body is only
 # partially available. Parameters: %S is the amount of bytes that need to be
 # fetched.
-NetworkPanel.fetchRemainingResponseContentLink=Dobavi preostalih %1$S bajta
+NetworkPanel.fetchRemainingResponseContentLink=Dobavi preostalih %S bajta
 
 # LOCALIZATION NOTE (NetworkPanel.fetchRemainingRequestContentLink): the
 # string displayed in the network panel when the request body is only
 # partially available. Parameters: %S is the amount of bytes that need to be
 # fetched.
-NetworkPanel.fetchRemainingRequestContentLink=Dobavi tijelo zahtjeva (%1$S bajta)
+NetworkPanel.fetchRemainingRequestContentLink=Dobavi tijelo zahtjeva (%S bajta)
 
 # LOCALIZATION NOTE (connectionTimeout): message displayed when the Remote Web
 # Console fails to connect to the server due to a timeout.
