--- a/bs/browser/chrome/browser/loop/loop.properties
+++ b/bs/browser/chrome/browser/loop/loop.properties
@@ -32,10 +32,14 @@ first_time_experience_subheading=Pridružite se razgovoru
 
 invite_header_text=Pozovite nekoga da vam se pridruži.
 invite_header_text2=Pozovite prijatelja da vam se pridruži
+invite_facebook_button=podijeljeno na Facebooku
 invite_facebook_triggered=podijeljeno!
+invite_contacts_button=podijeli s kontaktima
+invite_contacts_triggered=podijeljeno!
 invite_copy_button=kopiraj link
 invite_copy_triggered=kopirano!
 invite_email_button=pošalji link emailom
+invite_email_triggered=poslano emailom!
 
 # Status text
 display_name_guest=Gost
@@ -99,6 +103,7 @@ new_contact_button2=Dodaj novi kontakt
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Naziv
 contact_form_email_placeholder=Email
 contact_form_fxos_phone_placeholder=Firefox OS telefon
 contact_form_phone_placeholder2=Telefon
@@ -137,6 +142,7 @@ import_contacts_success_message={{total}} kontakt je uspješno uvezen.;{{total}}
 sync_contacts_button=Sinhronizuj kontakte
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Još nema kontakata.
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
 no_contacts_import_or_add2=Dodajte nekoga!
@@ -145,8 +151,10 @@ no_contacts_import_or_add2=Dodajte nekoga!
 no_conversations_message_heading2=Još nema razgovora.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Započnite novi!
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Nema odgovarajućih rezultata.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -193,6 +201,7 @@ edit_contact_email_label=Email
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=Gotovo
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -207,6 +216,7 @@ video_call_menu_button=Video razgovor
 gravatars_promo_message=Dijeljenjem email adrese s Gravatarom možete automatski dodati ikone profila vašim kontaktima. {{learn_more}}.
 gravatars_promo_message_learnmore=Saznajte više
 gravatars_promo_button_nothanks2=Ne, hvala
+gravatars_promo_button_use2=Koristi ikone profila
 
 # Conversation Window Strings
 
@@ -222,6 +232,8 @@ hangup_button_title=Prekini
 hangup_button_caption2=Izađi
 mute_local_audio_button_title=Isključi zvuk videa
 unmute_local_audio_button_title=Uključite vaš zvuk
+mute_local_video_button_title2=Onemogući video
+unmute_local_video_button_title2=Omogući video
 active_screenshare_button_title=Zaustavi dijeljenje
 inactive_screenshare_button_title=Podijelite vaš ekran
 share_tabs_button_title2=Podijelite vaše tabove
@@ -275,6 +287,7 @@ call_timeout_notification_text=Vaš poziv nije uspio.
 retry_call_button=Pokušaj ponovo
 email_link_button=Pošalji link emailom
 cancel_button=Otkaži
+rejoin_button=Ponovo se pridruži razgovoru
 
 cannot_start_call_session_not_ready=Nije moguće započeti poziv, jer sesija nije spremna.
 network_disconnected=Mrežna veza je nasilno prekinuta.
@@ -314,6 +327,7 @@ rooms_leave_button_label=Napusti
 rooms_list_copy_url_tooltip=Kopiraj link
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=NEDAVNI RAZGOVORI
 rooms_list_delete_tooltip=Obriši razgovor
 rooms_list_deleteConfirmation_label=Da li ste sigurni?
 rooms_change_failed_label=Nije moguće ažurirati razgovor
@@ -339,11 +353,13 @@ infobar_menuitem_dontshowagain_accesskey=N
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Popričajmo o…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Popričajmo o:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
