--- a/bs/browser/chrome/browser/migration/migration.properties
+++ b/bs/browser/chrome/browser/migration/migration.properties
@@ -17,6 +17,7 @@ sourceName360se=360 sigurni browser
 importedBookmarksFolder=Iz %S
 
 importedSafariReadingList=Lista čitanja (iz Safarija)
+importedEdgeReadingList=Lista čitanja (iz Edge-a)
 
 # Import Sources
 # Note: When adding an import source for profile reset, add the string name to
