--- a/bs/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/bs/toolkit/chrome/global/devtools/gclicommands.properties
@@ -99,10 +99,12 @@ screenshotDelayManual=Vrijeme za čekanje (u sekundama) prije nego se načini sc
 # LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
 # the 'dpi' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
+screenshotDPIDesc=Tačaka po inču
 
 # LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
 # 'dpi' parameter to the 'screenshot' command, displayed when the user
 # asks for help on what it does.
+screenshotDPIManual=Broj tačaka po inču u screenshotu
 
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
@@ -1582,6 +1584,7 @@ folderInvalidPath=Molimo da unesete ispravnu putanju
 folderOpenDirResult=Otvoren %1$S
 
 # LOCALIZATION NOTE (security)
+securityPrivacyDesc=Prikaži podržane mogućnosti za sigurnost i privatnost
 securityManual=Naredbe za prikaz i dobavljanje prijedloga o sigurnosnim mogućnostima za trenutnu domenu.
 securityListDesc=Prikaži sigurnosne mogućnosti
 securityListManual=Prikaži popis svih relevantnih sigurnosnih mogućnosti na trenutnoj stranici.
@@ -1595,6 +1598,7 @@ securityCSPNoCSPOnPage=Nisam mogao pronaći Content-Security-Policy za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Content-Security-Policy-Report-Only za
 # Referrer Policy specific
+securityReferrerNextURI=Kad posjećujem
 # LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
