--- a/bs/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/bs/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -56,6 +56,8 @@ removeAllPasswordsPrompt=Da li ste sigurni da želite ukloniti sve lozinke?
 removeAllPasswordsTitle=Ukloni sve lozinke
 removeLoginPrompt=Da li ste sigurni da želite ukloniti ovu prijavu?
 removeLoginTitle=Ukloni prijavu
+loginsDescriptionAll=Lozinke za sljedeće stranice su pohranjene na vašem računaru:
+loginsDescriptionFiltered=Navedene lozinke se podudaraju sa pretragom:
 # LOCALIZATION NOTE (loginHostAge):
 # This is used to show the context menu login items with their age.
 # 1st string is the username for the login, 2nd is the login's age.
