[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/accounts.properties
+++ b/son/browser/chrome/browser/accounts.properties
@@ -21,8 +21,8 @@ signInAfterUpgradeOnOtherDevice.accessKey = H
 needVerifiedUserShort = %S mana korosandi
 needVerifiedUserLong = Tabatandiyan doboo naagu batagaa ra kaŋ sanbandi %S do
 
-resendVerificationEmail.label = %Sanba taaga
-resendVerificationEmail.accessKey = R
+resendVerificationEmail.label = Sanba taaga
+resendVerificationEmail.accessKey = S
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = %S ciya taaga
