[az] update from Pootle (firefox-beta)

--- a/az/browser/chrome/browser/browser.properties
+++ b/az/browser/chrome/browser/browser.properties
@@ -581,7 +581,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 pəncərə);#1 (#2 pəncə
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = Seçilmiş Cihazı Paylaş;Seçilmiş Cihazları Paylaş
-getUserMedia.shareSelectedDevices.accesskey = P
+getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = Ekranı Paylaş
 getUserMedia.shareApplication.label = Seçilmiş Proqramları Paylaş
 getUserMedia.shareWindow.label = Seçilmiş pəncərəni paylaş
