--- a/az/browser/installer/override.properties
+++ b/az/browser/installer/override.properties
@@ -50,7 +50,7 @@ SpaceRequired="Lazım olan boş yer: "
 UninstallingText=$BrandFullNameDA aşağıdakı qovluqdan silinəcək. $_CLICK
 UninstallingSubText=Burdan silinəcək:
 FileError=Fayl yazmaq üçün açılarkən bir səhv yarandı: \r\n\r\n$0\r\n\r\nQuraşdırmanı dayandırmaq üçün Dayandır düyməsinə,\r\nyenidən yoxlamaq üçün Yenidən yoxla düyməsinə,\r\nbu faylı keçmək üçün Yox say düyməsinə basın.
-FileError_NoIgnore=Fayl yazmaq üçün açılarkən səhv yarandı: \n\n$0\n\nYenidən yoxlamaq üçün Yenidən yoxla düyməsini,\nquraşdırmanı dayandırmaq üçün Dayandır düyməsini basın.
+FileError_NoIgnore=Faylı yazmaq üçün açmaq mümkün olmadı: \r\n\r\n$0\r\n\r\nYenidən yoxla düyməsinə basaraq təkrar yoxlaya,\r\nvə ya Ləğv et düyməsi ilə quraşdırmanı dayandırın.
 CantWrite="Yazıla bilmədi: "
 CopyFailed=Kopyalama başarısız oldu
 CopyTo="Kopyala: "
