--- a/lij/browser/chrome/browser/devtools/webconsole.properties
+++ b/lij/browser/chrome/browser/devtools/webconsole.properties
@@ -70,21 +70,11 @@ update.accesskey=A
 timestampFormat=%02S:%02S:%02S.%03S
 
 helperFuncUnsupportedTypeError=No ciamâ pprint in sce sto tipo de ògetto.
-NetworkPanel.label=Ispeçionn-a a domanda da ræ
 # LOCALIZATION NOTE (NetworkPanel.deltaDurationMS):
 #
 # This string is used to show the duration between two network events (e.g
 # request and respones header or response header and response body).
 NetworkPanel.durationMS=%Sms
-# LOCALIZATION NOTE (NetworkPanel.imageSizeDeltaDurationMS):
-# This string is used to show the duration between the response header and the
-# response body event. It also shows the size of the received or cached image.
-#
-# The first %S is replace by the width of the inspected image.
-# The second %S is replaced by the height of the inspected image.
-# The third %S is replaced by the duration between the response header and the
-# response body event.
-NetworkPanel.imageSizeDeltaDurationMS=%Sx%Spx, Δ%Sms
 # LOCALIZATION NOTE (NetworkPanel.responseBodyUnableToDisplay.content):
 #
 # This string is displayed within the response body section of the NetworkPanel
@@ -95,7 +85,6 @@ NetworkPanel.imageSizeDeltaDurationMS=%Sx%Spx, Δ%Sms
 # The %S is replaced by the content type, that can't be displayed, examples are
 #  o application/x-shockwave-flash
 #  o music/crescendo
-NetworkPanel.responseBodyUnableToDisplay.content=No riescio a fa vedde e resposte de tipo "%S"
 ConsoleAPIDisabled=A Console Web ch'a registra API (console.log, console.info, console.warn, console.error) a l'é stæta dizabilitâ da 'n script de sta pagina.
 
 
@@ -119,12 +108,6 @@ gcliterm.instanceLabel=Istansa de %S
 # This string is used to display JavaScript functions that have no given name -
 # they are said to be anonymous. See stacktrace.outputMessage.
 stacktrace.anonymousFunction=<anònimo>
-
-# LOCALIZATION NOTE (stacktrace.outputMessage):
-# This string is used in the Web Console output to identify a web developer call
-# to console.trace(). The stack trace of JavaScript function calls is displayed.
-# In this minimal message we only show the last call.
-stacktrace.outputMessage=Traccia do Stack  da %S, fonçion %S, linia %S.
 
 # LOCALIZATION NOTE (timerStarted):
 # This string is used to display the result of the console.time() call.
@@ -154,7 +137,7 @@ listTabs.globalConsoleActor = *Console globale*
 longStringEllipsis = […]
 NetworkPanel.fetchRemainingResponseContentLink = Repiggia i restanti %1$S byte
 NetworkPanel.fetchRemainingRequestContentLink = Repiggia o còrpo de domanda (%1$S byte)
-ToolboxWebconsole.tooltip = Console web
+ToolboxWebconsole.tooltip2 = Console web (%S)
 cmd.commandkey = k
 connectionTimeout = Tenpo scheito pe-a conescion. Controlâ a Console di eroî da tutte e parte pe vedde che no ghe segian di mesaggi d'ero. Arvi torna a Console web pe provâ torna.
 webConsoleCmd.accesskey = w
@@ -171,4 +154,27 @@ webConsoleMoreInfoLabel = Atre informaçioin
 reflow.messageWithNoLink = reflow: %Sms
 reflow.messageWithLink = reflow: %Sms\u0020
 reflow.messageLinkText = fonçion %1$S, %2$S linia %3$S
+
+ToolboxWebConsole.panelLabel = Panello Console
+cdFunctionInvalidArgument = Inposcibile aduviâ cd() co-o barcon che t'eu: argomento no valido.
+emptySlotLabel = #1 spaçio veuo;#1 spaççi veui
+maxCountersExceeded = L'é stæto superou o numero mascimo de contatoî pe sta pagina.
+messageToggleDetails = Mostra/ascondi detalli mesaggio.
+noCounterLabel = <nisciunn-a etichetta>
+openNodeInInspector = Sciacca pe seleçionâ o groppo da analizâ
+selfxss.msg = Atençion a-e truffe: no incolâ còdice che no ti capisci. Sto chi o porieva consentî a da brutta gente de pigiâ o contròllo do computer. Scrivi ”%S” chi (no serve sciacâ invio) pe ativâ a fonçion incòlla.
+selfxss.okstring = consenti incòlla
+severity.error = Erô
+severity.warn = Avizo
+severity.info = Info
+severity.log = Registro
+table.index = (indice)
+table.iterationIndex = (indice iteraçion)
+
+
+
+
+
+
+
 
