l10:lij new translation part7

--- a/lij/webapprt/webapprt/webapp.properties
+++ b/lij/webapprt/webapprt/webapp.properties
@@ -34,3 +34,9 @@ desktop-notification.deny = No fâ vedde
 desktop-notification.remember = Aregòrda sta decixon
 paymentDialog.title = Pagamento
 paymentDialog.message = Quæ tipo de pagamento adeuvia?
+
+webapps.uninstall.title = Dizinstalaçion %S
+webapps.uninstall.description = Dizinstalâ “%S”?
+webapps.uninstall.uninstall = Dizinstalla app
+webapps.uninstall.dontuninstall = No dizinstalâ
+
