--- a/br/browser/chrome/browser/devtools/performance.properties
+++ b/br/browser/chrome/browser/devtools/performance.properties
@@ -94,6 +94,7 @@ category.tools=Tools
 # LOCALIZATION NOTE (table.bytes):
 # This string is displayed in the call tree after bytesize units.
 # %S represents the value in bytes.
+table.bytes=%S B
 
 # LOCALIZATION NOTE (table.ms2):
 # This string is displayed in the call tree after units of time in milliseconds.
@@ -102,6 +103,7 @@ category.tools=Tools
 # LOCALIZATION NOTE (table.percentage2):
 # This string is displayed in the call tree after units representing percentages.
 # %S represents the value in percentage with two decimal points, localized.
+table.percentage2=%S%
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -119,6 +121,7 @@ table.url.tooltiptext=View source in Debugger
 # LOCALIZATION NOTE (table.view-optimizations.tooltiptext2):
 # This string is displayed in the icon displayed next to frames that
 # have optimization data
+table.view-optimizations.tooltiptext2=Frame contains JIT optimization data
 
 # LOCALIZATION NOTE (recordingsList.importDialogTitle):
 # This string is displayed as a title for importing a recoring from disk.
