[br] update from Pootle (firefox)

--- a/br/browser/chrome/browser/loop/loop.properties
+++ b/br/browser/chrome/browser/loop/loop.properties
@@ -30,6 +30,12 @@ first_time_experience_button_label=Kregiñ ganti
 ## user to create his or her first conversation.
 
 invite_header_text=Pediñ unan bennak da gontañ kaoz
+invite_header_text2=Pediñ ur mignon da gontañ kaoz
+invite_facebook_button=rannañ war Facebook
+invite_facebook_triggered=rannet !
+invite_contacts_button=rannañ gant an darempredoù
+invite_contacts_triggered=rannet !
+invite_email_triggered=kaset ar postel !
 
 # Status text
 display_name_guest=Kouviad
@@ -89,6 +95,7 @@ contacts_search_placesholder2=Klask…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Ouzhpennañ un darempred nevez
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
@@ -129,12 +136,16 @@ sync_contacts_button=Goubredañ an darempredoù
 ## contacts in his address book
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Ouzhpennañ unan bennak !
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Kaozeadenn ebet evit poent
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Kregiñ unan nevez !
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Disoc'h ebet o kenglotañ.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -209,6 +220,8 @@ hangup_button_title=Adkregiñ
 hangup_button_caption2=Kuitaat
 mute_local_audio_button_title=Diweredekaat ar son
 unmute_local_audio_button_title=Gweredekaat ar son
+mute_local_video_button_title2=Diweredekaat ar video
+unmute_local_video_button_title2=Gweredekaat ar video
 active_screenshare_button_title=Paouez da rannañ
 inactive_screenshare_button_title=Rannit ho skramm
 share_tabs_button_title2=Rannañ ho ivinelloù
@@ -246,6 +259,7 @@ restart_call=Kejañ
 contact_unavailable_title=n'eo ket hegerz {{contactName}}.
 generic_contact_unavailable_title=N'eo ket hegerz an den-mañ.
 
+generic_failure_message=Kudennoù kalvezel a zo ganeomp...
 generic_failure_with_reason2=Gallout a rit klask en-dro pe kas un ere evit bezañ galvet diwezhatoc'h.
 generic_failure_no_reason2=Fellout a ra deoc'h klask en-dro ?
 
@@ -261,6 +275,7 @@ call_timeout_notification_text=C'hwitet en deus ho kalv.
 retry_call_button=Klask en-dro
 email_link_button=Kas an ere dre bostel
 cancel_button=Nullañ
+rejoin_button=Mont en-dro er gaozeadenn
 
 cannot_start_call_session_not_ready=N'haller ket kregiñ gant ur galv. An estez n'eo ket prest.
 network_disconnected=Echuet eo bet ar c'hennask ouzh ar rouedad gant un doare dic'hortoz.
@@ -300,6 +315,7 @@ rooms_leave_button_label=Kuitaat ar bajenn
 rooms_list_copy_url_tooltip=Eilañ an ere
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=KAOZEADENNOÙ NEVESAÑ
 rooms_list_delete_tooltip=Diverkañ ar gaozeadenn
 rooms_list_deleteConfirmation_label=Sur oc'h?
 rooms_change_failed_label=N'eo ket posupl hizivaat ar gaozeadenn
