l10:lij new translation part9

--- a/lij/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/lij/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -8,13 +8,13 @@ restartMessageUnlocker=O %S o l'é za averto ma o no risponde. O vegio processo 
 restartMessageNoUnlockerMac='Na còpia de %S a l'é za averta. Solo 'na còpia de %S a peu ese averta e solo inn-a a-a vòtta.
 restartMessageUnlockerMac='Na còpia de %S a l'é za averta. Questa còpia de %S a va serâ primma de arvî st'atra.
 
-profileTooltip=Profi: '%S' - Percorso: '%S'
+profileTooltip=Profî: '%S' - Percorso: '%S'
 
 pleaseSelectTitle=Seleçionn-a profî
-pleaseSelect=Pe piaxei seleçionn-a un profî pe iniçiâ %S, ò crea un neuvo profi.
+pleaseSelect=Pe piaxei seleçionn-a un profî pe iniçiâ %S, ò crea un neuvo profî.
 
 profileLockedTitle=Profî in uzo
-profileLocked2=O %S o no peu uzâ o profî "%S" perché o l'é za uzou.\n\nPe continoâ særa l'istansa de %S ò çerni 'n'atro profi.
+profileLocked2=O %S o no peu uzâ o profî "%S" perché o l'é za uzou.\n\nPe continoâ særa l'istansa de %S ò çerni 'n'atro profî.
 
 renameProfileTitle=Renòmina profî
 renameProfilePrompt=Renòmina o profî "%S" comme:
@@ -24,14 +24,14 @@ profileNameInvalid=O nomme do profî "%S" o no l'é permisso.
 
 chooseFolder=Çerni cartella do profî
 profileNameEmpty=Un nomme do profî veuo o no l'é permisso.
-invalidChar=O caratere "%S" o no l'é permisso into nomme do profi. Pe piaxei çerni un atro nomme.
+invalidChar=O caratere "%S" o no l'é permisso into nomme do profî. Pe piaxei çerni un atro nomme.
 
 deleteTitle=Scancella profî
-deleteProfileConfirm=Se ti scancelli un profî o saiâ scancelou da lista di profî e no ti poriæ anula l'açion.\nTi peu çerne ascì de scancelâ i file di dæti do profî con e teu inpostaçioin, certificati e atri dæti de l'utilizato. Sta açion scanceliâ a cartella "%S" e no a se poriâ anula.\nTi veu scancelâ i file di dæti do profi?
+deleteProfileConfirm=Se ti scancelli un profî o saiâ scancelou da lista di profî e no ti poriæ anula l'açion.\nTi peu çerne ascì de scancelâ i file di dæti do profî con e teu inpostaçioin, certificati e atri dæti de l'utilizato. Sta açion scanceliâ a cartella "%S" e no a se poriâ anula.\nTi veu scancelâ i file di dæti do profî?
 deleteFiles=Scancella File
 dontDeleteFiles=No Scancelâ File
 
-profileCreationFailed=No posso creâ o profi. Fòscia inta cartella scelta no se peu scrive.
+profileCreationFailed=No posso creâ o profî. Fòscia inta cartella scelta no se peu scrive.
 profileCreationFailedTitle=Creaçion do profî falia
 profileExists=Gh'é za un profî co-o mæximo nomme. Pe piaxei inserisci un'atro nomme.
 profileExistsTitle=O profilo l'existe
