--- a/lij/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/lij/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-rememberValue = Adeuvia o gestô de paròlle segrette pe aregordâ sto valo.
-rememberPassword = Adeuvia o gestô de paròlle segrette pe aregordâ sta paròlla segreta.
+rememberValue = Adeuvia o gestô de paròlle segrete pe aregordâ sto valo.
+rememberPassword = Adeuvia o gestô de paròlle segrete pe aregordâ sta paròlla segreta.
 savePasswordTitle = Conferma
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
@@ -31,13 +31,29 @@ notifyBarUpdateButtonAccessKey = A
 notifyBarDontChangeButtonText = No Cangiâ
 notifyBarDontChangeButtonAccessKey = N
 userSelectText = Pe piaxei conferma che ti cangi a paròlla segreta pe
-hidePasswords=Ascondi e paròlle segrette
+hidePasswords=Ascondi e paròlle segrete
 hidePasswordsAccessKey=A
-showPasswords=Fanni vedde e paròlle segrette
+showPasswords=Fanni vedde e paròlle segrete
 showPasswordsAccessKey=F
-noMasterPasswordPrompt=T'ê seguo che ti veu fâ vedde e teu paròlle segrette?
-removeAllPasswordsPrompt=T'ê seguo che ti veu scancelâ tutte e paròlle segrette?
-removeAllPasswordsTitle=Leva do mezo tutte e paròlle segrette
-loginsSpielAll=E paròlle segrette pe sti sciti son sarvæ in sciô teu computer:
-loginsSpielFiltered=Ò trovou ste paròlle segrette:
+noMasterPasswordPrompt=T'ê seguo che ti veu fâ vedde e teu paròlle segrete?
+removeAllPasswordsPrompt=T'ê seguo che ti veu scancelâ tutte e paròlle segrete?
+removeAllPasswordsTitle=Leva do mezo tutte e paròlle segrete
 
+duplicateLoginTitle = L'acesso gh'é za
+duplicateLogin = Gh'é za 'n acesso con sti dæti.
+loginHostAge = %1$S (%2$S)
+loginsDescriptionAll = I dæti d'acesso pe sti sciti en sarvæ in sciô computer:
+loginsDescriptionFiltered = Sti dæti d'acesso corispondan a-i criteri de riçerca:
+noUsernamePlaceholder = Nisciun nomme utente
+noUsername = Nisciun nomme utente
+rememberLoginButtonAccessKey = S
+rememberLoginButtonText = Sarva
+rememberLoginMsg = Sarvâ i dæti d'acesso in %S?
+rememberLoginMsgNoUser = Sarvâ a paròlla segreta in %S?
+removeLoginPrompt = Scancelâ st'acesso?
+removeLoginTitle = Scancelaçion acesso
+showPasswordPlaceholder = FANNI VEDDE
+updateLoginButtonAccessKey = A
+updateLoginButtonText = Agiorna
+updateLoginMsgNoUser = Agiornâ a paròlla segreta?
+updateLoginMsg = Agiornâ i dæti d'acesso?
