--- a/lij/webapprt/webapprt/overrides/appstrings.properties
+++ b/lij/webapprt/webapprt/overrides/appstrings.properties
@@ -13,7 +13,7 @@ proxyResolveFailure = L'aplicaçion a l'é configurâ pe adeuviâ 'n server prox
 proxyConnectFailure = L'aplicaçion a l'é configurâ pe adeuviâ 'n server proxy ch'o refua e conescoin.
 contentEncodingError = A risposta reçevua dò-u server a gh'à 'na forma de conprescion no valida ò no soporta.
 unsafeContentType = Inposcibile anâ avanti perché l'aplicaçion a l'à çercou de acede a 'n tipo de file no seguo. Contatâ l'aotô de l'aplicaçion pe faghe savei o problema.
-cspFrameAncestorBlocked = Tentativo da parte dell'aplicaçion di acede a 'na risorsa con di criteri in sciâ seguessa di contegnui che inpediscian l'incluxon con sto mòddo chi.
+cspBlocked = Tentativo da parte dell'aplicaçion di acede a 'na risorsa con di criteri in sciâ seguessa di contegnui che inpediscian o caregamento con sto mòddo chi.
 corruptedContentError = Inposcibile continoâ co-o caregamento de l'aplicaçion pe 'n erô scoverto inta trasmiscion di dæti.
 remoteXUL = Sta aplicaçion a l'é provou a adeuviâ 'na tecnòlogia no soportâ e a no gh'é ciu.
 
@@ -33,3 +33,5 @@ netTimeout = O tenpo concesso a l’operaçion o l'é scheito into tentativo de 
 phishingBlocked = O scito web %S o l'é stæto segnalou comme scito contrafæto, realizou pe fâ descovrî a-i utenti informaçioin personali ò finansiarie.
 resendButton.label = Trasmetti torna
 unknownProtocolFound = Un di sti protocolli (%S) o no l'é registrou òpure o no l'é consentio in sto contesto.
+sslv3Used = No l'é poscibile garantî a seguessa di dæti trasmissi a %S perché o vegne deuviou SSLv3, in protocòllo de seguessa no afidabile.
+unwantedBlocked = O scito web %S o l'é segnalou comme 'n scito con do software indexiderou e o l'é blocou in sciâ baze de-e inpostaçioin de seguessa.
