l10:lij new translation part10

--- a/lij/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/lij/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -114,6 +114,7 @@ type.theme.name=Aparensa
 type.locale.name=Lengoe
 type.plugin.name=Plugin
 type.dictionary.name=Diçionai
+type.experiment.name = Esperimenti
 
 #LOCALIZATION NOTE (details.notification.vulnerableUpdatable) %1$S is the add-on name
 details.notification.vulnerableUpdatable=%1$S o l'é nòtto pe ese instabile e o dovieiva ese agiornou.
@@ -128,6 +129,36 @@ notification.vulnerableUpdatable.link=Agiorna oua
 notification.vulnerableNoUpdate=%1$S o l'é nòtto pe ese debole, adeuvialo con atençion.
 notification.vulnerableNoUpdate.link=Ciù informaçioin
 type.service.name = Serviççi
+
+details.notification.gmpPending = %1$S o saiâ instalou tra quarche momento.
+details.experiment.time.daysRemaining = Manca #1 giorno;Manca #1 giorni
+details.experiment.time.endsToday = Meno di un giorno rimanente
+details.experiment.time.daysPassed = #1 giorno fa;#1 giorni fa
+details.experiment.time.endedToday = Meno de 'n giorno fa
+details.experiment.state.active = Ativo
+details.experiment.state.complete = Conpletou
+experiment.time.daysRemaining = Manca #1 giorno;Manca #1 giorni
+experiment.time.endsToday = Manca meno de 'n giorno
+experiment.time.daysPassed = #1 giorno fa;#1 giorni fa
+experiment.time.endedToday = Meno de 'n giorno fa
+experiment.state.active = Ativo
+experiment.state.complete = Conpletou
+details.notification.unsigned = %1$S o no l'é verificou pe l'uzo in %2$S. Stanni atento.
+details.notification.unsigned.link = Atre informaçioin
+details.notification.unsignedAndDisabled = %1$S o l'é dizativou perché l'uzo o no l'é verificou pe %2$S.
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
