--- a/son/services/sync/errors.properties
+++ b/son/services/sync/errors.properties
@@ -14,7 +14,7 @@ error.sync.failed_partial            = Bayrayhaya dumi foo wala ibooboyaŋ mana 
 # LOCALIZATION NOTE (error.sync.reason.serverMaintenance): We removed the extraneous period from this string
 error.sync.reason.serverMaintenance  = Firefox Sync feršikaa hawgayyanoo goo fondaa ra, hangandiyan ga šintin nga boŋ še
 
-invalid-captcha = Kalima šiiranteyaŋ, ceeci koyne
+invalid-captcha = Kalima laybanteyaŋ, ceeci koyne
 weak-password   = Šennikufal gaabikoyni sanbu
 
 # this is the fallback, if we hit an error we didn't bother to localize
