[az] update from Pootle (firefox)

--- a/az/browser/chrome/browser/migration/migration.properties
+++ b/az/browser/chrome/browser/migration/migration.properties
@@ -17,6 +17,7 @@ sourceName360se=360 Secure Browser
 importedBookmarksFolder=Buradan: %S
 
 importedSafariReadingList=Oxuma siyahısı (Safaridən)
+importedEdgeReadingList=Oxuma siyahısı (Edge-dən)
 
 # Import Sources
 # Note: When adding an import source for profile reset, add the string name to
