--- a/az/toolkit/chrome/global/aboutWebrtc.properties
+++ b/az/toolkit/chrome/global/aboutWebrtc.properties
@@ -18,13 +18,18 @@ save_page_dialog_title = about:webrtc-ni fərqli qeyd et
 
 # LOCALIZATION NOTE (debug_mode_off_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_off_state_msg = izləmə qeydiyyatı %1$S ünvanındadır.
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_on_state_msg = sazlama modu açıqdır, izləmə qeydiyyatı: %1$S
 
 # LOCALIZATION NOTE (aec_logging_msg_label, aec_logging_off_state_label,
 # aec_logging_on_state_label, aec_logging_on_state_msg):
 # AEC is an abbreviation for Acoustic Echo Cancellation.
+aec_logging_msg_label = AEC Qeydiyyatı
+aec_logging_off_state_label = AEC Qeydiyyatı başlat
+aec_logging_on_state_label = AEC Qeydiyyatı dayandır
 
 # LOCALIZATION NOTE (aec_logging_off_state_msg):
 # %1$S will be replaced by the full path to the directory containing the captured log files.
@@ -37,19 +42,26 @@ save_page_dialog_title = about:webrtc-ni fərqli qeyd et
 # LOCALIZATION NOTE (sdp_heading, local_sdp_heading, remote_sdp_heading):
 # "SDP" is an abbreviation for Session Description Protocol, an IETF standard.
 # See http://wikipedia.org/wiki/Session_Description_Protocol
+sdp_heading = SDP
+local_sdp_heading = Lokal SDP
+remote_sdp_heading = Üzaq SDP
 
 # LOCALIZATION NOTE (rtp_stats_heading): "RTP" is an abbreviation for the
 # Real-time Transport Protocol, an IETF specification, and should not
 # normally be translated. "Stats" is an abbreviation for Statistics.
+rtp_stats_heading = RTP Statistikaları
 
 # LOCALIZATION NOTE (ice_state, ice_stats_heading): "ICE" is an abbreviation
 # for Interactive Connectivity Establishment, which is an IETF protocol,
 # and should not normally be translated. "Stats" is an abbreviation for
 # Statistics.
+ice_state = ICE Vəziyyəti
+ice_stats_heading = ICE Statistikaları
 
 # LOCALIZATION NOTE (av_sync_label): "A/V" stands for Audio/Video.
 # "sync" is an abbreviation for sychronization. This is used as
 # a data label.
+av_sync_label = A/V sinxronizasiyası
 
 # LOCALIZATION NOTE (jitter_buffer_delay_label): A jitter buffer is an
 # element in the processing chain, see http://wikipedia.org/wiki/Jitter
@@ -61,16 +73,23 @@ save_page_dialog_title = about:webrtc-ni fərqli qeyd et
 # LOCALIZATION NOTE (local, remote): These adjectives are used to label a
 # line of statistics collected for a peer connection. The data represents
 # either the local or remote end of the connection.
+local = lokal
+remote = uzaq
 
 # LOCALIZATION NOTE (nominated): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank.
+nominated = Namizəd
 
 # LOCALIZATION NOTE (selected): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank. This represents an attribute of an ICE candidate.
+selected = Seçildi
 
 save_page_label = Səhifəni Yadda Saxla
+debug_mode_msg_label = Sazlama Modu
+debug_mode_off_state_label = Sazlama Modunu Başlat
+debug_mode_on_state_label = Sazlama Modunu dayandır
 connection_closed = bağlanıb
 received_label = Alındı
 sent_label = Göndərildi
