l10:lij new translation part12

--- a/lij/toolkit/chrome/global/findbar.properties
+++ b/lij/toolkit/chrome/global/findbar.properties
@@ -10,7 +10,5 @@ NormalFind = Treuva inta pagina
 FastFind = Riçerca rapida
 FastFindLinks = Riçerca rapida (solo colegamenti)
 CaseSensitive=(Contròlla e maioscole)
-FoundMatchCount=Trovou %S
-FoundMatchesCount=Trovê %S
-FoundTooManyMatches=Ciù de %S exiti
-
+FoundMatches = Corispondensa #1 de #2;Corispondensa #1 de #2
+FoundMatchesCountLimit = Ciù de #1 corispondensa;Ciù de #1 corispondense
