--- a/lij/toolkit/chrome/global/resetProfile.properties
+++ b/lij/toolkit/chrome/global/resetProfile.properties
@@ -2,6 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-resetUnusedProfile.message = Pâ che %S o no vegna adeuviou da 'n pö de tenpo. Anâ co-ina operaçion de netezamento pe garantî 'na megio esperiensa? Ah belin, benvegnuo torna chi.
-resetProfile.resetButton.label = Repiggia %S…
-resetProfile.resetButton.accesskey = R
+resetUnusedProfile.message = Pâ che %S o no vegna adeuviou da 'n pö de tenpo. Inandiâ ina operaçion de netezamento pe garantî 'na megio esperiensa? Ah belin, benvegnuo torna chi.
+refreshProfile.resetButton.label = Repiggia %S…
+refreshProfile.resetButton.accesskey = R
