--- a/lij/toolkit/chrome/global/viewSource.properties
+++ b/lij/toolkit/chrome/global/viewSource.properties
@@ -11,4 +11,7 @@ outOfRangeText    = Linia no trova.
 statusBarLineCol  = Linia %1$S, Col %2$S
 viewSelectionSourceTitle = Sorgente da seleçion DOM
 viewMathMLSourceTitle    = Sorgente DOM de MathML
-
+context_goToLine_label = Vanni a-a riga…
+context_goToLine_accesskey = L
+context_wrapLongLines_label = A cappo aotomatico
+context_highlightSyntax_label = Evidençia scintassi
