--- a/lij/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/lij/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -146,8 +146,10 @@ experiment.state.complete = Conpletou
 details.notification.unsigned = %1$S o no l'é verificou pe l'uzo in %2$S. Stanni atento.
 details.notification.unsigned.link = Atre informaçioin
 details.notification.unsignedAndDisabled = %1$S o l'é dizativou perché l'uzo o no l'é verificou pe %2$S.
-
-
+notification.gmpPending = %1$S o saiâ instalou tra quarche momento.
+notification.unsignedAndDisabled = %1$S o l'é dizativou perché l'uzo o no l'é verificou pe %2$S.
+notification.unsigned = %1$S o no l'é verificou pe l'uzo in %2$S. Stanni atento.
+notification.unsigned.link = Atre informaçioin
 
 
 
