--- a/lij/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/lij/toolkit/chrome/global/devtools/styleinspector.properties
@@ -14,11 +14,34 @@ rule.selectedElement = Sto elemento
 helpLinkTitle = Lezi a documentaçion de sta propietæ
 rule.warning.title = Valô propietæ no bon
 rule.empty = Nesciun elemento seleçionou.
-ruleView.contextmenu.selectAll = Seleçionn-a tutto
-ruleView.contextmenu.selectAll.accessKey = A
-ruleView.contextmenu.copy = Còpia
-ruleView.contextmenu.copy.accessKey = C
-computedView.contextmenu.selectAll = Seleçionn-a tutto
-computedView.contextmenu.selectAll.accessKey = A
-computedView.contextmenu.copy = Còpia
-computedView.contextmenu.copy.accessKey = C
+rule.keyframe = Fòtogrammi %S
+rule.userAgentStyles = (user agent)
+rule.filterProperty.title = Filtra regole che gh'an sta propietæ
+rule.selectorHighlighter.tooltip = Evidençia tutti i elementi che corispondan a sto seletô.
+styleinspector.contextmenu.copyColor = Còpia cô
+styleinspector.contextmenu.copyColor.accessKey = i
+styleinspector.contextmenu.copyUrl = Còpia URL
+styleinspector.contextmenu.copyUrl.accessKey = R
+styleinspector.contextmenu.copyImageDataUrl = Còpia Data-URL inmagine
+styleinspector.contextmenu.copyImageDataUrl.accessKey = L
+styleinspector.copyImageDataUrlError = Inposcibile copiâ Data-URL de l’inmagine
+styleinspector.contextmenu.toggleOrigSources = Veddi sorgenti originali
+styleinspector.contextmenu.toggleOrigSources.accessKey = o
+styleinspector.contextmenu.showMdnDocs = Veddi documentaçion MDN
+styleinspector.contextmenu.showMdnDocs.accessKey = D
+styleinspector.contextmenu.addNewRule = Azonzi neuva regola
+styleinspector.contextmenu.addNewRule.accessKey = u
+styleinspector.contextmenu.selectAll = Seleçionn-a tutto
+styleinspector.contextmenu.selectAll.accessKey = A
+styleinspector.contextmenu.copy = Còpia
+styleinspector.contextmenu.copy.accessKey = C
+styleinspector.contextmenu.selectAll = Seleçionn-a tutto
+styleinspector.contextmenu.selectAll.accessKey = A
+styleinspector.contextmenu.copy = Còpia
+styleinspector.contextmenu.copy.accessKey = C
+styleinspector.contextmenu.copyLocation = Còpia posixiçion
+styleinspector.contextmenu.copyPropertyDeclaration = Còpia diciaraçion propietæ
+styleinspector.contextmenu.copyPropertyName = Còpia nomme propietæ
+styleinspector.contextmenu.copyPropertyValue = Còpia valô propietæ
+styleinspector.contextmenu.copyRule = Còpia regola
+styleinspector.contextmenu.copySelector = Còpia seletô
