l10:lij new translation part14

--- a/lij/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/lij/browser/chrome/browser/devtools/sourceeditor.properties
@@ -56,5 +56,10 @@ indentMore.commandkey = ]
 moveLineUp.commandkey = Alt-giù
 moveLineDown.commandkey = Alt-su
 
-
+autocompletion.commandkey = Spaçio
+autocompletion.docsLink = documentaçion
+autocompletion.notFound = no atrovou
+find.commandkey = F
+findAgain.commandkey = G
+showInformation2.commandkey = Maiosc+Ctrl+spaçio
 
