--- a/lij/browser/chrome/browser/devtools/styleeditor.properties
+++ b/lij/browser/chrome/browser/devtools/styleeditor.properties
@@ -50,20 +50,19 @@ saveStyleSheet.filter=File CSS
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to Save
 saveStyleSheet.commandkey=S
 
-ToolboxStyleEditor.label = Editor do stile
-ToolboxStyleEditor.tooltip2 = Editor do stile (CSS)
+ToolboxStyleEditor.label = Editô do stile
 
 open.commandkey = VK_F7
 open.accesskey = t
 
-confirmNavigationAway.message = Se t'abandonn-i sta pagina i cangiamenti fæti inte l'Editor di stili saian perdui.
+confirmNavigationAway.message = Se t'abandonn-i sta pagina i cangiamenti fæti inte l'Editô do stile saian perdui.
 confirmNavigationAway.buttonLeave = Abandonn-a sta pagina
 confirmNavigationAway.buttonLeaveAccesskey = A
 confirmNavigationAway.buttonStay = Stanni inte sta pagina chi
 confirmNavigationAway.buttonStayAccesskey = S
 
-
-
-
+ToolboxStyleEditor.panelLabel = Panello Editô do stile
+ToolboxStyleEditor.tooltip3 = Editô do stile (%S)
+error-compressed = Inposcibile fâ vedde informaçioin in scâ copertua pe-i feuggi di stile conpressi
 
 
