--- a/lij/browser/chrome/browser/devtools/shadereditor.properties
+++ b/lij/browser/chrome/browser/devtools/shadereditor.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+ToolboxShaderEditor.panelLabel = Panello Editor shader
 ToolboxShaderEditor.label = Editor Shader
 ToolboxShaderEditor.tooltip = Editor live pe-o lengoazzi GLSL shader pe WebGL
 shadersList.programLabel = Programma %S
