[br] update from Pootle (firefox)

--- a/br/dom/chrome/xslt/xslt.properties
+++ b/br/dom/chrome/xslt/xslt.properties
@@ -33,6 +33,7 @@
 29 = Briataenn digempouez.
 30 = O krouiñ un elfenn gant un anv QName didalvoudek.
 31 = Liamm an argemmenn a zaougementiñ liamm an argemmenn e-barzh an hevelep patrom.
+32 = N'eo ket aotreet ar galv d'an arc'hwel alc'hwez
 
 LoadingError = Fazi en ur gargañ ar stil follennad : %S
 TransformError = Fazi e-pad treuzfurmiñ XSLT : %S
