--- a/br/services/sync/sync.properties
+++ b/br/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Goubredañ diwezhañ : %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Kennaskan da Sync
 
 mobile.label = Sinedoù hezoug
 
