--- a/br/dom/chrome/dom/dom.properties
+++ b/br/dom/chrome/dom/dom.properties
@@ -175,4 +175,6 @@ InterceptedUsedResponse=Un objed Reponse arveret a zo bet tremenet gant ServiceW
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
 ClientRequestOpaqueInterception=Tremenet eo bet un objed Respont divoull da FetchEvent.respondWith() gant ServiceWorker padal eo un azgoulenn arval FetchEvent.request. Un azgoulenn arval a zo savet gant ur merdeer peurvuiañ, pe gant ur skript Worker a live uhelañ.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+BadOpaqueRedirectInterception=Tremenet eo bet un objed Respont divoull-eeun da FetchEvent.respondWith() gant ServiceWorker padal ne oa ket FetchEvent.request un azgoulenn merdeiñ.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
+InterceptionCanceled=Nullet eo bet an dastapadenn rouedad gant ServiceWorker en ur gervel FetchEvent.preventDefault().
