--- a/br/dom/chrome/security/security.properties
+++ b/br/dom/chrome/security/security.properties
@@ -41,6 +41,7 @@ PKPMultipleReportURIs=Public-Key-Pins: erspizet eo bet un talbenn oc'h enderc'he
 PKPPinsetDoesNotMatch=Public-Key-Pins: Erspizet eo bet un talbenn gant ur pin didalvoudek gant al lec'hienn.
 PKPNoBackupPin=Public-Key-Pins: Erspizet eo bet un talbenn hep pin gwarediñ gant al lec'hienn.
 PKPCouldNotSaveState=Public-Key-Pins : ur fazi a zo c'hoarvezet en ur merkañ al lec'hienn evel ostiz Public-Key-Pins.
+PKPRootNotBuiltIn=Public-Key-Pins : an testeni arveret gant al lec'hienn n'eo ket bet roet gant un testeni er stal gwrizienn dre ziouer. Evit mirout ouzh torradur ouzhpenn eo bet laosket an talbenn erspizet a-gostez.
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Arverañ a ra al lec'hienn-mañ un testeni SHA-1. Erbedet eo e arverit testenioù gant treolioù sinañ hag a arver arc'hwelioù bouc'halañ kreñvoc'h eget SHA-1.
@@ -55,12 +56,19 @@ BothAllowScriptsAndSameOriginPresent=Un iframe hag en deus allow-scripts hag all
 
 # Sub-Resource Integrity
 # LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+MalformedIntegrityHash=Un enneg stummet fall a zo gant elfenn ar skript en e zoareen anterinder : "%1$S". Ar stumm talvoudek a zo "<treal enneg>-<talvoud enneg>".
 # LOCALIZATION NOTE: Do not translate "integrity"
+InvalidIntegrityLength=Un hirder fall a zo gant an enneg ebarzhet en doareen anterinder.
 # LOCALIZATION NOTE: Do not translate "integrity"
+InvalidIntegrityBase64=N'haller ket ezvonegañ an enneg ebarzhet en doareen anterinder.
 # LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+IntegrityMismatch=N'eus enneg ebet e-touez an "%1$S" en doareen anterinder o klotañ gant endalc'had an isloaz.
 # LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+IneligibleResource="%1$S" n'eo ket dec'havael evit gwiriadurioù anterinder dre m'eo na CORS-gweredekaet, nag eus an hevelep orin.
 # LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+UnsupportedHashAlg=Treol enneg anskor en doareenn anterinder : "%1$S"
 # LOCALIZATION NOTE: Do not translate "integrity"
+NoValidMetadata=N'eus metaroadenn talvoudek ebet ebarzhet en doareen anterinder.
 
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=An hedad RC4 a zo implijet gant al lec'hienn-mañ evit an enrinegañ, ar pezh a zo diamzeret hag arvarus.\u0020
