--- a/uz/browser/chrome/browser/search.properties
+++ b/uz/browser/chrome/browser/search.properties
@@ -36,6 +36,7 @@ cmd_addFoundEngineMenu=Qidiruv tizimini qoʻshish
 # LOCALIZATION NOTE (searchForKeywordsWith):
 # This string is used to build the header above the list of one-click
 # search providers:  "Search for <user-typed keywords> with:"
+searchForKeywordsWith="%S"ni izlash
 
 # LOCALIZATION NOTE (searchWithHeader):
 # The wording of this string should be as close as possible to
