--- a/uz/browser/chrome/overrides/appstrings.properties
+++ b/uz/browser/chrome/overrides/appstrings.properties
@@ -30,6 +30,7 @@ externalProtocolUnknown=<Noma’lum>
 externalProtocolChkMsg=Ushbu turdagi barcha linklar uchun tanlovimni eslab qol.
 externalProtocolLaunchBtn=Ilova dasturni ishga tushirish
 malwareBlocked=%S sayti hujum qiluvchi sayt sifatida ma’lumot berilgan va xavfsizlik moslamalaringizga asoslanib bloklangan.
+unwantedBlocked=%S sayti hujum qiluvchi sayt sifatida ma’lumot berilgan va xavfsizlik parametrlariga asoslanib bloklangan.
 phishingBlocked=%S veb sayti foydalanuvchilarning shaxsiy va iqtisodiy ma’lumotlarini tarqatishga asoslangan qallob sayt sifatida xabar berilgan.
 cspBlocked=Bu sahifa ushbu ushbu usulda yuklashga halaqit beradigan xavfsizlik siyosatiga ega.
 corruptedContentError=Siz koʻrmoqchi boʻgan sahifani koʻrsatib boʻlmaydi, chunki ma’lumotlarni uzatishda xato aniqlandi.
