l10:lij new translation part15

--- a/lij/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/lij/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -2,5 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-ToolboxWebAudioEditor.label = Editô web aodio
-ToolboxWebAudioEditor.tooltip = Strumento pe vedde e cangiâ contesti web aodio
+ToolboxWebAudioEditor1.label = Web aodio
+ToolboxWebAudioEditor1.panelLabel = Panello Web aodio
+ToolboxWebAudioEditor1.tooltip = Strumento pe vedde e cangiâ contesti web aodio e analizâ groppi aodio
+collapseInspector = Cinprimi analixi
+expandInspector = Espandi analixi
+webAudioEditorTooltipBypass = Escluddi AudioNode
