--- a/lij/browser/chrome/browser/devtools/webconsole.properties
+++ b/lij/browser/chrome/browser/devtools/webconsole.properties
@@ -170,11 +170,7 @@ severity.info = Info
 severity.log = Registro
 table.index = (indice)
 table.iterationIndex = (indice iteraçion)
-
-
-
-
-
-
-
-
+table.key = Ciave
+table.value = Valoî
+unknownLocation = <sconosciuo>
+webConsoleXhrIndicator = XHR
