--- a/lij/browser/chrome/browser/downloads/downloads.properties
+++ b/lij/browser/chrome/browser/downloads/downloads.properties
@@ -88,3 +88,14 @@ statusSeparator=%1$S \u2014 %2$S
 statusSeparatorBeforeNumber=%1$S \u2014  %2$S
 
 otherDownloads2 = +%1$S atro descaregamento; +%1$S atri descaregamenti
+
+blockedMalware = Sto file o contiene viros o malware.
+blockedPotentiallyUnwanted = Sto file o porieiva aroinâ o computer.
+blockedUncommon = No te convegne miga arvî sto file.
+unblockButtonContinue = Sblòcca a mæxima
+unblockButtonCancel = Tegni blocou
+unblockHeader = Sblocâ sto file?
+unblockTypeMalware = Sto file o contegne viros ò 'n'atro tipo de malware che te peuan aroinâ o computer.
+unblockTypePotentiallyUnwanted = Sto file o pâ 'n descaregamento bon ma o porieiva cangiâ i programmi instalæ e-e inpostaçioin.
+unblockTypeUncommon = Sto file o l'é scaregou da 'n scito web che no conosciuo e o l'é potensiamlmente pericolozo. Porieiva ese 'n reizego arvilo.
+unblockTip = ti peu çercâ 'na sorgente alternativa pe o descaregamento ò provâ torna a scaregâ o file ciù tardi.
