--- a/lij/browser/chrome/browser/devtools/toolbox.properties
+++ b/lij/browser/chrome/browser/devtools/toolbox.properties
@@ -1,7 +1,7 @@
 toolboxDockButtons.bottom.tooltip = Mescia de scianco a-o barcon do navegatô
 toolboxDockButtons.side.tooltip = Mescia in sciô scianco a-o barcon do navegatô
 toolboxDockButtons.window.tooltip = Fanni vedde inte 'n barcon separou
-toolboxToggleButton.errors = #1 ero;#1 erî
+toolboxToggleButton.errors = #1 erô;#1 eroî
 toolboxToggleButton.warnings = #1 avizo;#1 avizi
 toolboxToggleButton.tooltip = %1$S, %2$S\nSciacca co-o ratto pe ativâ i Strumenti do svilupatô.
 toolbox.titleTemplate = %1$S - %2$S
@@ -10,3 +10,15 @@ optionsButton.tooltip = Opçioin strumenti
 options.toolNotSupportedMarker = %1$S *
 scratchpad.keycode = VK_F4
 browserConsoleCmd.commandkey = j
+toolboxDockButtons.bottom.minimize = Riduxi i strumenti do svilupatô
+toolboxDockButtons.bottom.maximize = Ingrandisci i strumenti do svilupatô
+toolbox.label = Strumenti do svilupatô
+options.label = Òpçioin
+options.panelLabel = Panello òpçioin strumenti
+pickButton.tooltip = Seleçionn-a 'n elemento inta pagina
+sidebar.showAllTabs.tooltip = Tutti i feuggi
+options.darkTheme.label = Tema scuo
+options.lightTheme.label = Tema ciæo
+toolbox.noContentProcess.message = Nisciun processo pe-i contegnui che xeuan.
+toolbox.viewJsSourceInDebugger.label = Arvi file in Debugger
+toolbox.viewCssSourceInStyleEditor.label = Arvi file into Editô do stile
