--- a/lij/browser/chrome/browser/engineManager.properties
+++ b/lij/browser/chrome/browser/engineManager.properties
@@ -2,9 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-editTitle=Cangia tastea
-editMsg=Inserisci 'na neuva paròlla ciave pe "%S":
-duplicateTitle=Sta paròlla ciave gh'é za
-duplicateEngineMsg=Ti t'æ çernuo 'na paròlla ciave che a l'é uzâ da "%S". Pe piaxei ti ne peu çerne 'n'atra.
-duplicateBookmarkMsg=Ti t'æ çernuo 'na paròlla ciave che a l'é uzâ da un segnalibbro. Pe piaxei ti ne peu çerne 'n'atra.
+duplicateTitle=Sta paròlla ciave a gh'é za
+duplicateEngineMsg=Ti æ çernuo 'na paròlla ciave ch'a l'é uzâ da "%S". Pe piaxei che ti ne çerni 'n'atra.
+duplicateBookmarkMsg=Ti æ çernuo 'na paròlla ciave che a l'é uzâ da un segnalibbro. Pe piaxei che ti ne çerni 'n'atra.
 
