[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -116,4 +116,6 @@ devtools-webide-button2.tooltiptext = Yab WebIDE (%S)
 
 # LOCALIZATION NOTE(pocket-button.label, pocket-button.tooltiptext): "Pocket"
 # is a brand name.
+pocket-button.label = Pocket
+pocket-button.tooltiptext = Gwok i Pocket
 
